<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="218dp"
        android:layout_height="38dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="177dp"
        android:text="@string/nombre_de_pelicula"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreText"
        android:layout_width="236dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="159dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="166dp"
        android:text="@string/director"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreText" />

    <EditText
        android:id="@+id/directorText"
        android:layout_width="235dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/idiomtxt"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="130dp"
        android:text="@string/idioma"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directorText" />


    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="250dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idiomtxt">

        <RadioButton
            android:id="@+id/RIdiomaing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingles" />

        <RadioButton
            android:id="@+id/RIdiomaesp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/espa_ol" />

    </RadioGroup>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="246dp"
        android:layout_height="37dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="146dp"
        android:text="@string/genero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Spinner
        android:id="@+id/spinnerGenero"
        android:layout_width="371dp"
        android:layout_height="31dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="77dp"
        android:onClick="onClick"
        android:text="@string/guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGenero" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="72dp"
        android:onClick="onClick"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnguardar"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGenero" />

</androidx.constraintlayout.widget.ConstraintLayout>